<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_admin">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_admin_home" />
        <item
            android:id="@+id/nav_admin_altasr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_admin_altasr" />
        <item
            android:id="@+id/nav_admin_actualizarr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_admin_actualizarr" />
        <item
            android:id="@+id/nav_admin_borrarr"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_admin_borrarr" />
        <item
            android:id="@+id/nav_admin_asignar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_admin_asignar" />
        <item
            android:id="@+id/nav_admin_actualizar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_admin_actualizar" />
        <item
            android:id="@+id/nav_admin_vizualizar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_admin_visualizar" />
        <item
            android:id="@+id/nav_admin_borrar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_admin_borrar" />
    </group>
</menu>