<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_clientes">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cliente_home" />
        <item
            android:id="@+id/nav_clientes_altas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cliente_altas" />
        <item
            android:id="@+id/nav_clientes_modificar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cliente_modificar" />
        <item
            android:id="@+id/nav_clientes_eliminar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cliente_eliminar" />
    </group>
</menu>